package app.entities;

public enum Gender {
    MALE,
    FEMALE,
    GENDERLESS
}