package app.entities;

public enum PokemonGame {
    RED,
    BLUE,
    GOLD,
    SILVER,
    CRYSTAL,
    RUBY,
    SAPPHIRE,
    EMERALD,
    FIRE_RED,
    LEAF_GREEN
}